added JPA functionality and service tests